# Market-data-dissemination-system

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakePresets.txt  README.md
..bfg-report/2025-05-12/18-20-57/: cache-stats.txt  object-id-map.old-new.txt
client/: main.cpp
client.dir/Release/client.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog
proto/: marketdata.proto
server/: c_cpp_properties.json  config.json  main.cpp  orderbook.cpp  orderbook.hpp
server.dir/Release/server.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  server.lastbuildstate
x64/Release/ZERO_CHECK/: ZERO_CHECK.recipe
x64/Release/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
